datafeeder: use spring-batch to initialize the datasets to the database
