# datafeeder/api.yaml
@@ -19,7 +19,9 @@ paths:
     post:
       tags:
         - File Upload
-      description: 'Upload one or multiple files to the server, and get a handle to the job'
+      description: Upload one or multiple files to the server, and get a handle to the job.
+                   Once the files are uploaded, the analysis process should be triggered
+                   through "POST /upload/{jobId}/analyze"
       operationId: uploadFiles
       requestBody:
         content:
@@ -33,7 +35,7 @@ paths:
                     type: string
                     format: binary
       responses:
-        202:
+        200:
           $ref: '#/components/responses/UploadStatusResponse'
         401:
           description: 'Not authenticated'
@@ -105,6 +107,26 @@ paths:
         409:
           description: 'Conflict. The abort=true parameter was not provided and the analysis or publishing job is running'
   
+  /upload/{jobId}/analyze:
+    post:
+      tags:
+        - File Upload
+      description: 'Start the analysis process for the uploaded file package'
+      operationId: analyze
+      parameters:
+      - $ref: '#/components/parameters/jobId'
+      responses:
+        202:
+          description: Accepted, analysis process started for the given upload package
+        400:
+          description: 'Bad request. Some parameter is not acceptable or missing'
+        401:
+          description: 'Not authenticated'
+        403:
+          description: 'Forbidden. User has no priviledges access the requested job'
+        409:
+          description: 'Conflict. The upload is not ready for publishing.'
+
   /upload/{jobId}/publish:
     post:
       tags:
