# datafeeder/src/main/java/org/georchestra/datafeeder/api/FileUploadApiController.java
@@ -20,26 +20,25 @@ package org.georchestra.datafeeder.api;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 import javax.annotation.security.RolesAllowed;
 
-import org.georchestra.datafeeder.model.DataUploadState;
+import org.georchestra.datafeeder.model.DataUploadJob;
 import org.georchestra.datafeeder.service.DataUploadService;
 import org.georchestra.datafeeder.service.FileStorageService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
 
 import io.swagger.annotations.Api;
@@ -50,26 +49,14 @@ import lombok.NonNull;
 @RolesAllowed({ "ROLE_USER", "ROLE_ADMINISTRATOR" })
 public class FileUploadApiController implements FileUploadApi {
 
-    private @Autowired NativeWebRequest currentRequest;
     private @Autowired FileStorageService storageService;
     private @Autowired DataUploadService uploadService;
     private @Autowired ApiResponseMapper mapper;
 
-    public @Override Optional<NativeWebRequest> getRequest() {
-        return Optional.of(currentRequest);
-    }
-
-    @Override
-    public ResponseEntity<UploadJobStatus> findUploadJob(@PathVariable("jobId") UUID uploadId) {
-        DataUploadState state = uploadService.findJob(uploadId);
-        UploadJobStatus response = mapper.toApi(state);
-        return ResponseEntity.ok(response);
-    }
-
     @Override
     public ResponseEntity<UploadJobStatus> uploadFiles(@RequestPart(value = "filename") List<MultipartFile> files) {
         UUID uploadId;
-        DataUploadState state;
+        DataUploadJob state;
         final String userName = getUserName();
         try {
             uploadId = storageService.saveUploads(files);
@@ -80,13 +67,27 @@ public class FileUploadApiController implements FileUploadApi {
             throw new RuntimeException(e);// TODO translate to ResponseStatusException
         }
         UploadJobStatus response = mapper.toApi(state);
-        return ResponseEntity.accepted().body(response);
+        return ResponseEntity.ok().body(response);
+    }
+
+    @Override
+    public ResponseEntity<Void> analyze(@PathVariable("jobId") UUID uploadId) {
+        DataUploadJob state = getAndCheckAccessRights(uploadId);
+        uploadService.analyze(state.getJobId());
+        return ResponseEntity.accepted().build();
+    }
+
+    @Override
+    public ResponseEntity<UploadJobStatus> findUploadJob(@PathVariable("jobId") UUID uploadId) {
+        DataUploadJob state = getAndCheckAccessRights(uploadId);
+        UploadJobStatus response = mapper.toApi(state);
+        return ResponseEntity.ok(response);
     }
 
     @Override
     @RolesAllowed("ROLE_ADMINISTRATOR")
     public ResponseEntity<List<UploadJobStatus>> findAllUploadJobs() {
-        List<DataUploadState> all = this.uploadService.findAllJobs();
+        List<DataUploadJob> all = this.uploadService.findAllJobs();
         List<UploadJobStatus> response = all.stream().map(mapper::toApi).collect(Collectors.toList());
         return ResponseEntity.ok(response);
     }
@@ -94,7 +95,7 @@ public class FileUploadApiController implements FileUploadApi {
     @Override
     public ResponseEntity<List<UploadJobStatus>> findUserUploadJobs() {
         String userName = getUserName();
-        List<DataUploadState> all = this.uploadService.findUserJobs(userName);
+        List<DataUploadJob> all = this.uploadService.findUserJobs(userName);
         List<UploadJobStatus> response = all.stream().map(mapper::toApi).collect(Collectors.toList());
         return ResponseEntity.ok(response);
     }
@@ -117,5 +118,27 @@ public class FileUploadApiController implements FileUploadApi {
         Authentication auth = context.getAuthentication();
         String userName = auth.getName();
         return userName;
+    }
+
+    private @NonNull boolean isAdministrator() {
+        SecurityContext context = SecurityContextHolder.getContext();
+        Authentication auth = context.getAuthentication();
+        return auth.getAuthorities().stream().map(GrantedAuthority::getAuthority)
+                .anyMatch("ROLE_ADMINISTRATOR"::equals);
+    }
+
+    private DataUploadJob getOrNotFound(UUID uploadId) {
+        DataUploadJob state = this.uploadService.findJob(uploadId)
+                .orElseThrow(() -> ApiException.notFound("upload %s does not exist", uploadId));
+        return state;
+    }
+
+    private DataUploadJob getAndCheckAccessRights(UUID uploadId) {
+        DataUploadJob state = getOrNotFound(uploadId);
+        final String userName = getUserName();
+        if (!userName.equals(state.getUsername()) && !isAdministrator()) {
+            throw ApiException.forbidden("User %s has no access rights to this upload", userName);
+        }
+        return state;
     }
 }
